--- a/app/views/framework_views/parts/formats/display_date.scala.html
+++ b/app/views/framework_views/parts/formats/display_date.scala.html
@@ -19,7 +19,7 @@
 @if(date!=null){
     @framework.utils.Utilities.getDateFormat(pattern).format(date)
     @if(alert) {
-        <i class="glyphicons glyphicons-bell" style="color: red;"></i>
+        <i class="fa fa-bell" style="color: red;"></i>
     }
 } else {
     @framework.commons.IFrameworkConstants.DEFAULT_VALUE_EMPTY_DATA
