--- a/app/views/framework_views/parts/kpi/display_kpi_trend_modal.scala.html
+++ b/app/views/framework_views/parts/kpi/display_kpi_trend_modal.scala.html
@@ -25,7 +25,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">X</button>
                 <h4 class="modal-title">
-                    <span class="glyphicons glyphicons-stats"></span> @parts.Msg(name)
+                    <span class="fa fa-line-chart"></span> @parts.Msg(name)
                     <div class="pull-right small"><i>@parts.Msg("kpi.label.last_update"): @parts.formats.display_date(lastUpdate, framework.utils.Utilities.getDefaultDatePattern() + " kk:mm") &nbsp;&nbsp;</i></div>
                 </h4>
             </div>
