--- a/app/views/framework_views/parts/menubars/topmenubar.scala.html
+++ b/app/views/framework_views/parts/menubars/topmenubar.scala.html
@@ -43,7 +43,7 @@
             
                 @if(_topMenuBar.isUserConnected && _topMenuBar.hasSecondaryPerspectives) {
                     <div class="navbar-brand">
-                        <a style="margin-top: -9px; padding-top: 10px" class="pull-left btn btn-light" href="@applicationIndex"><span class="glyphicons glyphicons-home glyphicons-panel"></span></a>
+                        <a style="margin-top: -9px; padding-top: 10px" class="pull-left btn btn-light" href="@applicationIndex"><span class="fa fa-home fa-lg"></span></a>
                         <div class="pull-left">&nbsp;&nbsp;&nbsp;</div>
                         <div class="dropdown pull-left">
                             <div style="cursor:pointer" aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown" class="dropdown-toggle">
