--- a/app/views/framework_views/parts/password_with_eye.scala.html
+++ b/app/views/framework_views/parts/password_with_eye.scala.html
@@ -21,18 +21,18 @@
 @import framework_views.parts
 
 <div class="form-group @if(field.hasErrors) {has-error}" id="@(field.id)-container">
-    <label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+    <label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}</label>
     <div class="">
         <div class="input-group">
             <input type="password" name="@(field.name)" id="@(field.id)" class="form-control">
-            <span class="input-group-addon"><i style="cursor: pointer;" class="glyphicons glyphicons-eye-open" id="show-password"></i></span>
+            <span class="input-group-addon"><i style="cursor: pointer;" class="fa fa-eye" id="show-password"></i></span>
         </div>
         <span class="help-block"><strong>@{field.error.map { error => parts.Msg(error.message) }}</strong></span>
     </div>
 </div>
 <script>
-    $("#@(field.id)-container").find(".glyphicons-eye-open").on("click", function() {
-        $(this).toggleClass("glyphicons-eye-close");
+    $("#@(field.id)-container").find(".fa-eye").on("click", function() {
+        $(this).toggleClass("fa-eye-slash");
         var type = $("#@(field.id)").attr("type");
         if (type == "text") {
             $("#@(field.id)").attr("type", "password");
