--- a/app/views/framework_views/parts/autocomplete.scala.html
+++ b/app/views/framework_views/parts/autocomplete.scala.html
@@ -33,7 +33,7 @@
 <div class="form-group @if(field.hasErrors) {has-error}">
     <label class="control-label" for="@field.id">
        @if(fieldLabel != null && !fieldLabel.equals("")) {
-           @fieldLabel@if(isRequired(field)){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}
+           @fieldLabel@if(isRequired(field)){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}
        }
     </label>
     <p>
