--- a/app/views/framework_views/parts/basic_input_text.scala.html
+++ b/app/views/framework_views/parts/basic_input_text.scala.html
@@ -20,7 +20,7 @@
 @import framework_views.parts
 
 <div class="form-group @if(field.hasErrors) {has-error}">
-    <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+    <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}</label>
     <input class="form-control" type="text" id="@field.id" name="@field.name" value="@field.value" data-primitive="true"/>
     <span class="help-block">
         @if(fieldDescription != null && !fieldDescription.equals("")){@parts.Msg(fieldDescription) <br/>}
