--- a/app/views/framework_views/parts/checkboxlist.scala.html
+++ b/app/views/framework_views/parts/checkboxlist.scala.html
@@ -46,7 +46,7 @@
 
 <div class="form-group @if(field.hasErrors) {has-error}">
     @if(fieldLabel != null && !fieldLabel.equals("")) {
-        <label class="control-label">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+        <label class="control-label">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}</label>
         <span class="help-block">
             @if(fieldDescription != null && !fieldDescription.equals("")){@parts.Msg(fieldDescription) <br/>}
             <strong>@{field.error.map { error => parts.Msg(error.message) }}</strong>
