--- a/app/views/framework_views/parts/dateinput.scala.html
+++ b/app/views/framework_views/parts/dateinput.scala.html
@@ -22,12 +22,12 @@
 
 <div class="form-group @if(field.hasErrors) {has-error}">
     @if(fieldLabel != null && !fieldLabel.equals("")) {
-       <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+       <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}</label>
     }
     <div class="input-group">
         <input class="form-control" type="text" id="@field.id" name="@field.name" readonly="readonly" value="@field.value" placeholder="@Msg("form.input.date.placeholder")"/>
         <span class="input-group-btn">
-            <button id="empty-@(field.id)-field" class="btn btn-default" type="button"><span class="glyphicons glyphicons-bin"></span></button>
+            <button id="empty-@(field.id)-field" class="btn btn-default" type="button"><span class="fa fa-trash"></span></button>
         </span>
     </div>
 
