--- a/app/views/framework_views/parts/radiobuttongroup.scala.html
+++ b/app/views/framework_views/parts/radiobuttongroup.scala.html
@@ -23,7 +23,7 @@
 @import framework_views.parts
 <div class="form-group @if(field.hasErrors) {has-error}">
     
-    <label class="control-label" for="@field.id">@fieldLabel &nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i></label>
+    <label class="control-label" for="@field.id">@fieldLabel &nbsp;<i style="color: red;" class="fa fa-asterisk"></i></label>
     <br/>
     
     <div data-toggle="buttons" class="btn-group">
