--- a/app/views/framework_views/parts/table/tableview.scala.html
+++ b/app/views/framework_views/parts/table/tableview.scala.html
@@ -44,7 +44,7 @@
     @if(header.getSorterJsFunction()==null){
         <th id="_@table.getId()_@header.getName()">@parts.Msg(header.getLabel())</th>
     }else{
-        <th><a href="#" onclick="maf_sort('@header.getSorterJsFunction()',this.parentNode,'@table.getId()');return false;"><i class="glyphicons glyphicons-chevron-down"></i>&nbsp;@parts.Msg(header.getLabel())</a></th>
+        <th><a href="#" onclick="maf_sort('@header.getSorterJsFunction()',this.parentNode,'@table.getId()');return false;"><i class="fa fa-chevron-down"></i>&nbsp;@parts.Msg(header.getLabel())</a></th>
     }
 }
 </tr>
