--- a/app/views/framework_views/parts/textarea.scala.html
+++ b/app/views/framework_views/parts/textarea.scala.html
@@ -20,7 +20,7 @@
 @import framework_views.parts
 
 <div class="form-group @if(field.hasErrors) {has-error}">
-    <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+    <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}</label>
     <div class="">
         <textarea name="@field.name" id="@field.id" class="form-control">@field.value</textarea>
         <span class="help-block">
