--- a/app/views/framework_views/parts/table/tableview_with_pagination.scala.html
+++ b/app/views/framework_views/parts/table/tableview_with_pagination.scala.html
@@ -19,7 +19,7 @@
 	filterText: String = null,
 	filterColumn: String = null)
 @tableview(table)
-@paginationview(pagination, filterText, filterColumn, null)
+@paginationview(pagination, filterText, filterColumn)
 @******************************************************
  Combine the tableview with a paginationview
  ******************************************************@ 
