--- a/app/views/framework_views/parts/table/tableview_with_pagination_and_queryparams.scala.html
+++ b/app/views/framework_views/parts/table/tableview_with_pagination_and_queryparams.scala.html
@@ -22,11 +22,11 @@
     filterColumn: String = null,
     queryParams: String = null,
     useAjax: Boolean = false,
-    tableContainerAsJQuery: String = null,
+    tableContainerId: String = null,
     tableUrl: String = null
 )
 @tableview(table)
-@paginationview(pagination, filterText, filterColumn, queryParams, useAjax, tableContainerAsJQuery, tableUrl)
+@paginationview(pagination, filterText, filterColumn, queryParams, useAjax, tableContainerId, tableUrl)
 @******************************************************
  Combine the tableview with a paginationview
  ******************************************************@ 
