--- a/app/views/framework_views/parts/table/tableview_with_pagination_and_queryparams.scala.html
+++ b/app/views/framework_views/parts/table/tableview_with_pagination_and_queryparams.scala.html
@@ -26,7 +26,7 @@
     tableUrl: String = null
 )
 @tableview(table)
-@paginationview(pagination, filterText, filterColumn, queryParams, useAjax, tableContainerId, tableUrl)
+@paginationview(table.getId, pagination, filterText, filterColumn, queryParams, useAjax, tableContainerId, tableUrl)
 @******************************************************
  Combine the tableview with a paginationview
  ******************************************************@ 
