--- a/app/views/framework_views/parts/formats/display_preference_as_row.scala.html
+++ b/app/views/framework_views/parts/formats/display_preference_as_row.scala.html
@@ -30,7 +30,7 @@
         @parts.Msg(customAttributeValue.getDefinition().description)
     </td>
     <td>
-        @customAttributeValue.renderDisplay()
+        @customAttributeValue.renderDisplay(_messagesPluginService)
     </td>
 </tr>
 }
