--- a/app/views/framework_views/parts/extended_attributes_with_filter_input.scala.html
+++ b/app/views/framework_views/parts/extended_attributes_with_filter_input.scala.html
@@ -16,13 +16,17 @@
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
 @(objectForm: Form[_], objectType: Class[_], filter: String, objectId: Long)
+
+@import commons._
+
 @customAttributeValues=@{
 models.framework_models.common.CustomAttributeDefinition.getOrderedCustomAttributeValues(objectType, filter, objectId);
 }
+
 @if(customAttributeValues!=null && customAttributeValues.size()!=0){
-	@for(customAttributeValue <- customAttributeValues){
-		@customAttributeValue.renderFormField(objectForm(framework.utils.CustomAttributeFormAndDisplayHandler.getFieldNameFromDefinitionUuid(customAttributeValue.getDefinition().uuid)), true)
-	}
+    @for(customAttributeValue <- customAttributeValues){
+        @customAttributeValue.renderFormField(_messagesPluginService, objectForm(_customAttributeManagerService.getFieldNameFromDefinitionUuid(customAttributeValue.getDefinition().uuid)), true)
+    }
 }
 
 @*********************************************************
