--- a/app/views/framework_views/parts/formats/display_extended_attributes_with_filter.scala.html
+++ b/app/views/framework_views/parts/formats/display_extended_attributes_with_filter.scala.html
@@ -18,6 +18,7 @@
 @(objectType: Class[_], filter: String, objectId: Long)
 
 @import framework_views.parts
+@import framework_views.parts.commons._
 
 @customAttributeValues=@{
 models.framework_models.common.CustomAttributeDefinition.getOrderedCustomAttributeValues(objectType, filter, objectId);
@@ -35,7 +36,7 @@ models.framework_models.common.CustomAttributeDefinition.getOrderedCustomAttribu
                         @parts.Msg(customAttributeValue.getDefinition().name)
                     </th>
                     <td>
-                        @customAttributeValue.renderDisplay()
+                        @customAttributeValue.renderDisplay(_messagesPluginService)
                     </td>
                 </tr>
             }
