--- a/app/views/framework_views/parts/formats/display_preference.scala.html
+++ b/app/views/framework_views/parts/formats/display_preference.scala.html
@@ -27,7 +27,7 @@
         <strong>@parts.Msg(customAttributeValue.getDefinition().name)</strong>
     </div>
     <div class="col-md-4">
-        @customAttributeValue.renderDisplay()
+        @customAttributeValue.renderDisplay(_messagesPluginService)
     </div>
     <div class="col-md-4">
         <div class="panel panel-info">
